--- a/index.html
+++ b/index.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-
-  </head>
+<head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <title>Liz Thomas's Portfolio</title>
+</head>
   
-  <body>
+<body>
 
-  </body>
+</body>
 </html>
