Add h1 styling class to styles.css

--- a/index.html
+++ b/index.html
@@ -6,6 +6,14 @@
 </head>
   
 <body>
+<h1>Hi, I'm Liz Thomas</h1>
+<h2>Currently I am: A student at Epicodus</h2>
+
+<img src="img/et-self-portrait.jpeg" alt="A self portrait digital painting of Liz Thomas">
+
+<h3>Check out my work:</h3>
+
+
 
 </body>
 </html>
