--- a/index.html
+++ b/index.html
@@ -8,16 +8,29 @@
 <body>
   <h1>Hi, I'm Liz Thomas</h1>
   <h2>
-    <span class="currently">Currently I am:</span> A student at Epicodus</h2>
+    <span class="currently">Currently I am:</span> a student @ <a href="https://www.epicodus.com/">Epicodus</a></h2>
 
-  <img src="img/et-self-portrait.jpeg" alt="A self portrait digital painting of Liz Thomas">
+  <img class="self-portrait" src="img/et-self-portrait.jpeg" alt="A self portrait digital painting of Liz Thomas">
 
 <h3>Check out my work:</h3>
+
+Vacation Website
+
+Pet Adoption Website
+
+Resort Website
+
+Vacation Blog
+
+Canoe Dog Blog
+
+My First Website
+
 
 
 <h4>About Me:</h4>
 <div class="about-box">
-  <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. She hopes to use programming as a new platform to work creatively and help make the world a better and brighter place!</p>
+  <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. She hopes to use programming as a new platform to work creatively and help make the world a <em>better</em> and <strong>brighter</strong> place!</p>
 </div>
 
 </body>
