Add .column-1 text-align, width, height, float, margin, padding, border, background-color, and typography styling

--- a/index.html
+++ b/index.html
@@ -12,19 +12,56 @@
 
   <img class="self-portrait" src="img/et-self-portrait.jpeg" alt="A self portrait digital painting of Liz Thomas">
 
-<h3>Check out my work:</h3>
+  <h3>Check out my work:</h3>
 
-Vacation Website
-
-Pet Adoption Website
-
-Resort Website
-
-Vacation Blog
-
-Canoe Dog Blog
-
-My First Website
+  <div class="column-1">
+    <h5> Vacation Website</h5>
+    <p>
+      <a href="https://github.com/mrunderoad/vacation-site">Link to GitHub Repository</a>
+    </p>
+    This website was made about a place that my pair programming partner and I wanted to visit. We chose Vancouver, BC. We included reasons for going there and added silly content for the Vacation Packages at the bottom of the page. We used Bootstrap to create the columns and rows at the bottom of the page.
+    <h6>Languages Used:</h6>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+    This site was Co-authored by: Isaac Overton
+  </div>
+  <div class="column-1">
+    <h5>Adoption Website</h5>
+    <p>
+      <a href="https://github.com/mrunderoad/adoption-site">Link to GitHub Repository</a>
+    </p>
+    This is a website for a Ped Adoption site called "In the arms of an Angel" that was made while pair programming at Epicodus. We made columns and included images, and list of pros and cons for each animal. This site shows our work using cascading styles.
+    <h6>Languages Used:</h6>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+    This site was Co-authored by: Isaac Overton
+  </div>
+  <div class="column-1">
+    <h5>Private Island Resort Website</h5>
+    <p>
+      <a href="https://github.com/ekthomas25/private-island-resort">Link to GitHub Repository</a>
+    </p>
+    This is a website for a private island resort called Pizza Island Resort that was made while pair programming at Epicodus. This site illustrates my ability to link to other pages, include images, and use styling. During this project, I was able to practice branching to experiment with styling options.
+    <h6>Languages Used:</h6>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
+    This site was Co-authored by: Kate Kiatsiri
+  </div>
+  <div class="column-2">
+    <h5>Vacation Blog</h5>
+  </div>
+  <div class="column-2">
+    <h5>Dog Blog</h5>
+  </div>
+  <div class="column-2">
+    <h5>First Website</h5>
+  </div>
 
 
 
