Add README.md, add column-2 in index.html

--- a/index.html
+++ b/index.html
@@ -55,12 +55,38 @@
   </div>
   <div class="column-2">
     <h5>Vacation Blog</h5>
+    <p>
+      <a href="https://github.com/ekthomas25/markdown-practice-blog">Link to GitHub Repository</a>
+    </p>
+    This is a blog post about vacationing on the island of Lana'i that I created while at Epicodus. This site illustrates my ability to use Markdown. During this project I practiced linking to other pages, including images, and use styling.
+    <h6>Languages Used:</h6>
+    <ul>
+      <li>Markdown</li>
+    </ul>
   </div>
   <div class="column-2">
     <h5>Dog Blog</h5>
+    <p>
+      <a href="https://ekthomas25.github.io/dog-blog/">Link to GitHub Page</a>
+    </p>
+    This is a blog for my fake dog, named Canoe Dog, that I created while at Epicodus. This site illustrates my ability to use a variety of ways of using styling. During this project I practiced linking to other pages and including images.
+    <h6>Languages Used:</h6>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
   </div>
   <div class="column-2">
-    <h5>First Website</h5>
+    <h5>My First Website</h5>
+    <p>
+      <a href="https://ekthomas25.github.io/my-first-webpage/">Link to GitHub Repository</a>
+    </p>
+    This is a website that I created while at Epicodus. This site illustrates my ability to use a block elements. During this project I practiced linking to other pages, sites and including images. I later went back and added CSS elements to give it some flair.
+    <h6>Languages Used:</h6>
+    <ul>
+      <li>HTML</li>
+      <li>CSS</li>
+    </ul>
   </div>
 
 
