--- a/index.html
+++ b/index.html
@@ -89,12 +89,11 @@
     </ul>
   </div>
 
-
-
-<h4>About Me:</h4>
-<div class="about-box">
-  <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. She hopes to use programming as a new platform to work creatively and help make the world a <em>better</em> and <strong>brighter</strong> place!</p>
-</div>
+  <div class="space">Congratulations! You found my secret text!</div>
+  <h4>About Me:</h4>
+  <div class="about-box">
+    <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. She hopes to use programming as a new platform to work creatively and help make the world a <em>better</em> and <strong>brighter</strong> place!</p>
+  </div>
 
 </body>
 </html>
