--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
     <p>
       <a href="https://ekthomas25.github.io/my-first-webpage/">Link to GitHub Repository</a>
     </p>
-    This is a website that I created while at Epicodus. This site illustrates my ability to use a block elements. During this project I practiced linking to other pages, sites and including images. I later went back and added CSS elements to give it some flair.
+    This is a website that I created while at Epicodus. This site illustrates my ability to use block elements. During this project I practiced linking to other pages, sites and including images. I later went back and added CSS elements to give it some flair.
     <h6>Languages Used:</h6>
     <ul>
       <li>HTML</li>
@@ -94,6 +94,8 @@
   <div class="about-box">
     <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. She hopes to use programming as a new platform to work creatively and help make the world a <em>better</em> and <strong>brighter</strong> place!</p>
   </div>
+  <div class="experience-box">
 
+  </div>
 </body>
 </html>
