--- a/index.html
+++ b/index.html
@@ -94,8 +94,25 @@
   <div class="about-box">
     <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. She hopes to use programming as a new platform to work creatively and help make the world a <em>better</em> and <strong>brighter</strong> place!</p>
   </div>
-  <div class="experience-box">
 
+  <div class="experience-box">
+    <div class="work-box">
+      <div class="experience-h-box">Past Work Experience:</div>
+      <ul>
+        <li>Operations Manager @ Mordax Systems 2020 - 201</li>
+        <li>Operations Assistant @ Digital Craft 2019-2020</li>
+        <li>Laser Tech/Fabrication Assistant @ MC Laserlabs 2018-2020</li>
+        <li>Operations Manager @ Flora Medicine 2018-2019</li>
+      </ul>
+    </div>
+    <div class="work-box">
+      <div class="experience-h-box">Education Experience:</div>
+      <ul>
+        <li>Epicodus - C# Track - Oct. 2021-Present</li>
+        <li>Portland State University - BFA, Art Practices - 2018</li>
+        <li>Portland Community College - Oregon Associate of Arts Transfer Degree - 2013</li>
+      </ul>
+    </div>
   </div>
 </body>
 </html>
