Change h4 font-size: 60, add font-weight: 800, font-style:oblique, text-align: center

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <img class="self-portrait" src="img/et-self-portrait.jpeg" alt="A self portrait digital painting of Liz Thomas">
 
-  <h3>Check out my work:</h3>
+  <h3>......Ch-Ch-Ch-Check out my work......</h3>
 
   <div class="column-1">
     <h5> Vacation Website</h5>
