Fix typos in text.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
   
 <body>
   <h1>Hi, I'm Liz Thomas</h1>
-  <h2>
+  <br>
+    <h2>
     <span class="currently">Currently I am:</span> a student @ <a href="https://www.epicodus.com/">Epicodus</a></h2>
 
   <img class="self-portrait" src="img/et-self-portrait.jpeg" alt="A self portrait digital painting of Liz Thomas">
@@ -25,27 +26,27 @@
       <li>HTML</li>
       <li>CSS</li>
     </ul>
-    This site was Co-authored by: Isaac Overton
+    This site was Co-authored by: Isaac Overstreet
   </div>
   <div class="column-1">
     <h5>Adoption Website</h5>
     <p>
       <a href="https://github.com/mrunderoad/adoption-site">Link to GitHub Repository</a>
     </p>
-    This is a website for a Ped Adoption site called "In the arms of an Angel" that was made while pair programming at Epicodus. We made columns and included images, and list of pros and cons for each animal. This site shows our work using cascading styles.
+    This is a website for a Ped Adoption site called "In the arms of an Angel" that was made while pair programming at Epicodus. We made columns and included images, and a list of pros and cons for each animal. This site shows our work using cascading styles.
     <h6>Languages Used:</h6>
     <ul>
       <li>HTML</li>
       <li>CSS</li>
     </ul>
-    This site was Co-authored by: Isaac Overton
+    This site was Co-authored by: Isaac Overstreet
   </div>
   <div class="column-1">
     <h5>Private Island Resort Website</h5>
     <p>
       <a href="https://github.com/ekthomas25/private-island-resort">Link to GitHub Repository</a>
     </p>
-    This is a website for a private island resort called Pizza Island Resort that was made while pair programming at Epicodus. This site illustrates my ability to link to other pages, include images, and use styling. During this project, I was able to practice branching to experiment with styling options.
+    This is a website for a private island resort called Pizza Island Resort that was made while pair programming at Epicodus. This site illustrates my ability to link to other pages, include images, and use styling. During this project I was able to practice branching to experiment with styling options.
     <h6>Languages Used:</h6>
     <ul>
       <li>HTML</li>
@@ -58,7 +59,7 @@
     <p>
       <a href="https://github.com/ekthomas25/markdown-practice-blog">Link to GitHub Repository</a>
     </p>
-    This is a blog post about vacationing on the island of Lana'i that I created while at Epicodus. This site illustrates my ability to use Markdown. During this project I practiced linking to other pages, including images, and use styling.
+    This is a blog post about vacationing on the island of Lana'i that I created while at Epicodus. This site illustrates my ability to use Markdown. During this project I practiced linking to other pages, including images, and used Markdown's fun way of styling.
     <h6>Languages Used:</h6>
     <ul>
       <li>Markdown</li>
@@ -69,7 +70,7 @@
     <p>
       <a href="https://ekthomas25.github.io/dog-blog/">Link to GitHub Page</a>
     </p>
-    This is a blog for my fake dog, named Canoe Dog, that I created while at Epicodus. This site illustrates my ability to use a variety of ways of using styling. During this project I practiced linking to other pages and including images.
+    This is a blog for my fake dog, named Canoe Dog, that I created while at Epicodus. This site illustrates my ability to use a variety of style elements. During this project I practiced linking to other pages and including images.
     <h6>Languages Used:</h6>
     <ul>
       <li>HTML</li>
@@ -93,7 +94,8 @@
   <h4>About Me:</h4>
   <div class="about-box">
 
-    <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. She hopes to use programming as a new platform to work creatively and help make the world a <em>better</em> and <strong>brighter</strong> place!</p>
+    <p>    A Portland native, Liz Thomas has always been drawn to the digital realm, having begun playing around with basic digital art programs with her family’s first computer in the early 1990s. From there she moved onto illustrating in KidPix in the late 90s, to using early versions of Adobe Photoshop, and has endeavored into Adobe Illustrator, Premiere Pro, and Ableton Live. She also had a stint working with digitally controlled CO2 lasers to fabricate a wide variety of 3D projects. </p>
+    </p>She hopes to use programming as a new platform to work creatively and help make the world a <em>better</em> and <strong>brighter</strong> place!</p>
   </div>
 
   <div class="experience-box">
